# arga-cli

./: .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml
.github/workflows/: publish.yml
arga_cli/: __init__.py  entry.py  init.py  main.py  mcp.py
arga_cli/assets/: arga-entry
arga_cli/wizard/: __init__.py  constants.py  env.py  output.py  prompts.py  provision.py  session.py  summary.py
nix/: arga-cli.nix
tests/: test_cli_entry.py  test_cli_git.py  test_cli_gitlab_twin.py  test_cli_linear_twin.py  test_cli_mcp.py  test_cli_new_modes.py  test_cli_runs.py  test_cli_scan.py  test_cli_scenarios.py  test_cli_test_url.py  test_cli_validate_config.py  test_cli_validate_pr.py
