[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arga-cli"
version = "0.1.6"
description = "Command-line interface for Arga authentication, MCP installation, and browser validation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Arga Labs" },
]
keywords = ["arga", "cli", "mcp", "developer-tools", "validation"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "httpx>=0.27.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/ArgaLabs/arga-cli"
Repository = "https://github.com/ArgaLabs/arga-cli"
Issues = "https://github.com/ArgaLabs/arga-cli/issues"

[project.scripts]
arga = "arga_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arga_cli", "arga_cli.*"]
namespaces = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
